# sample-contact-walking

./: .gitignore  LICENSE  README.md  setup.sh
.devcontainer/: .env
.devcontainer/gpu/: devcontainer.json
.devcontainer/no_gpu/: devcontainer.json
achilles_model_custom/: CMakeLists.txt  package.xml
achilles_model_custom/mujoco/: achilles.xml  achilles_stand_pd.xml  sample_sim.xml  sim_achilles.xml
achilles_model_custom/urdf/: achilles.urdf
contact_planning/: package.xml  setup.cfg  setup.py
contact_planning/contact_planning/: contact_planner.py  mujoco_geom_reader.py
docker/: .env  Dockerfile  docker-compose.yml
g1_model/: CMakeLists.txt  package.xml
g1_model/mujoco/: basic_scene.xml  g1_18dof.xml  g1_27dof.xml  g1_27dof_fixed_base.xml  g1_29dof_with_hand.xml  g1_29dof_with_hand_fixed_base.xml  g1_hand.xml  g1_tile2_scene.xml  stairs.xml  stairs_scene.xml  tile_scene.xml
g1_model/urdf/: g1_hand.urdf  g1_viz.urdf
go2_model/: CMakeLists.txt  package.xml
go2_model/mujoco/: go2.xml  go2_lab_space_1.xml  go2_lab_space_2_basic_stones.xml  go2_lab_space_3_multiple_stones.xml  go2_lab_space_4_thin_and_blocks.xml  go2_tile2_scene.xml  go2_tile_scene.xml
go2_model/urdf/: go2_description.urdf
sample_contact_msgs/: CMakeLists.txt  package.xml
sample_contact_msgs/msg/: CommandedTarget.msg  ContactInfo.msg  ContactPolytope.msg  ContactPolytopeArray.msg  ContactSchedule.msg
sample_contact_walking/: CMakeLists.txt  package.xml
sample_contact_walking/configs/: achilles_sim_config.yaml  basic_torque_config.yaml  g1_hardware_config.yaml  g1_mpc_config full_model.yaml  g1_mpc_config.yaml  g1_mpc_config_full_model.yaml  g1_mpc_hardware_config.yaml  g1_sim_config.yaml  g1_sim_config_full_model.yaml  go2_hardware_config.yaml  go2_mpc_config.yaml  go2_mpc_hardware_config.yaml  go2_sim_config.yaml  mpc_config.yaml  obk_sim_config.yaml  wbc_config.yaml
sample_contact_walking/include/sample_contact_walking/: achilles_estimator.h  achilles_mpc.h  achilles_wbc.h  robot_estimator.h  robot_mpc.h  torque_control_test.h
sample_contact_walking/src/: achilles_estimator.cpp  achilles_mpc.cpp  achilles_wbc.cpp  controller_spin.cpp  robot_estimator.cpp  robot_mpc.cpp  torque_control_test.cpp
